--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,8 +1,9 @@
-name: SonarCloud Code Analysis
+name: SonarCloud Analysis
 
 on:
   push:
     branches:
+      - module-2-exercise
       - main
   pull_request:
     types: [opened, synchronize, reopened]
@@ -11,13 +12,11 @@ jobs:
   build:
     name: Build and Analyze with SonarCloud
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
